--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px 15px 50px;
+    padding: 20px 15px 120px; /* leave space for footer */
   }
   header {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     padding: 20px 10px;
-    max-width: 900px;
+    max-width: 1000px;
     width: 100%;
     background: rgba(255 255 255 / 0.05);
     border-radius: 15px;
@@ -35,7 +35,7 @@
     user-select: none;
   }
   header h1 {
-    font-size: 2.6rem;
+    font-size: 2.4rem;
     margin-bottom: 8px;
     color: #7df9ff;
     text-shadow:
@@ -46,21 +46,82 @@
       0 0 30px #0ff;
   }
   header p {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: #a3d2ffcc;
   }
+
+  /* Sections area */
+  .controls {
+    max-width: 1200px;
+    width: 100%;
+    margin: 15px 10px;
+    display: flex;
+    gap: 12px;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .left-controls, .right-controls {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+
+  .btn {
+    padding: 8px 14px;
+    border-radius: 12px;
+    background: linear-gradient(45deg, #00e5ff, #0077b6);
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    font-weight: 700;
+    box-shadow: 0 4px 12px #00e5ff66;
+    border: none;
+  }
+
+  .btn.ghost {
+    background: rgba(255 255 255 / 0.06);
+    color: #a3d2ff;
+    box-shadow: none;
+    border: 1px solid rgba(255 255 255 / 0.04);
+  }
+
+  .sections-nav {
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+  }
+
+  .section-pill {
+    padding: 8px 12px;
+    border-radius: 999px;
+    background: rgba(255 255 255 / 0.04);
+    cursor: pointer;
+    font-weight: 600;
+    color: #cfefff;
+    border: 1px solid rgba(255 255 255 / 0.03);
+  }
+
+  .section-pill.active {
+    background: linear-gradient(45deg,#00e5ff,#00a4d6);
+    color: #001f2a;
+    box-shadow: 0 6px 20px #00e5ff66;
+    transform: translateY(-3px);
+  }
+
   .skins {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
     gap: 25px;
     max-width: 1200px;
     width: 100%;
-    padding: 0 10px;
+    padding: 10px;
   }
   .skin {
-    background: rgba(255 255 255 / 0.1);
+    background: rgba(255 255 255 / 0.08);
     border-radius: 20px;
-    padding: 15px 10px 20px;
+    padding: 15px 10px 14px;
     text-align: center;
     box-shadow:
       0 4px 8px rgba(0, 0, 0, 0.7),
@@ -72,6 +133,7 @@
     transition:
       box-shadow 0.3s ease,
       transform 0.3s ease;
+    position: relative;
   }
   .skin:hover {
     box-shadow:
@@ -120,6 +182,22 @@
       0 6px 20px #00ffffcc;
     transform: scale(1.05);
   }
+
+  .badge {
+    position: absolute;
+    left: 12px;
+    top: 12px;
+    background: rgba(0,0,0,0.45);
+    padding: 6px 10px;
+    border-radius: 12px;
+    font-size: 12px;
+    color: #fff;
+    backdrop-filter: blur(6px);
+    border: 1px solid rgba(255,255,255,0.04);
+  }
+
+  .downloads-count { font-weight: 700; }
+
   /* المودال (نافذة التفاصيل) */
   .modal-overlay {
     position: fixed;
@@ -129,17 +207,18 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    padding: 20px;
   }
   .modal-overlay.active {
     display: flex;
   }
   .modal {
-    background: rgba(255 255 255 / 0.1);
+    background: rgba(255 255 255 / 0.06);
     border-radius: 20px;
     backdrop-filter: blur(12px);
     box-shadow: 0 0 30px #00e5ffcc;
     max-width: 900px;
-    width: 90%;
+    width: 100%;
     display: flex;
     gap: 20px;
     padding: 20px;
@@ -182,6 +261,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 100%;
   }
   .modal-right .download-buttons a {
     padding: 12px 20px;
@@ -199,7 +279,7 @@
   .modal-right .download-buttons a:hover {
     background: linear-gradient(45deg, #00c2ff, #005f87);
     box-shadow: 0 6px 20px #00ffffcc;
-    transform: scale(1.05);
+    transform: scale(1.02);
   }
   .close-btn {
     align-self: flex-start;
@@ -215,6 +295,12 @@
   .close-btn:hover {
     color: #00ffff;
   }
+
+  /* rating */
+  .rating { display:flex; gap:6px; align-items:center; }
+  .star { cursor:pointer; font-size:20px; user-select:none; }
+  .like-btn { padding:6px 10px; border-radius:8px; }
+
   /* تجاوب */
   @media (max-width: 800px) {
     .modal {
@@ -245,12 +331,12 @@
       padding: 12px 8px 15px;
     }
   }
- 
-  style>
+
+/* search */
 .search-container {
   position: relative;
   width: 300px;
-  margin: 20px auto;
+  margin: 10px 0;
   direction: rtl;
 }
 
@@ -280,8 +366,10 @@
   pointer-events: none;
   opacity: 0.6;
 }
-</style>
 
+/* footer space */
+.spacer { height: 20px; }
+</style>
 
 </head>
 <body>
@@ -297,6 +385,38 @@
   <h1>🧥 سكنات ماين كرافت بيدروك</h1>
   <p>اضغط تحميل للحصول على نسخة Bedrock الخاصة بالسكن</p>
 </header>
+
+<!-- Controls: sections, random, featured -->
+<div class="controls">
+  <div class="left-controls">
+    <div class="sections-nav" id="sectionsNav">
+      <!-- أقسام منظمة -->
+      <div class="section-pill active" data-section="all">الكل</div>
+      <div class="section-pill" data-section="anime">أنمي</div>
+      <div class="section-pill" data-section="pvp">PvP</div>
+      <div class="section-pill" data-section="cute">كيوت</div>
+      <div class="section-pill" data-section="arabic">سكنات عربية</div>
+      <div class="section-pill" data-section="popular">مشهورة</div>
+    </div>
+  </div>
+  <div class="right-controls">
+    <button class="btn" id="randomBtn">🎲 سكن عشوائي</button>
+    
+  </div>
+</div>
+
+<!-- Featured / Popular area -->
+<section style="max-width:1200px; width:100%; padding: 10px; margin-bottom:12px;">
+  <div id="featuredArea" style="display:flex; gap:12px; align-items:center;">
+    <div style="flex:1; background:rgba(255,255,255,0.03); padding:12px; border-radius:12px;">
+      <strong>سكن اليوم:</strong>
+      <div id="skinOfTheDay" style="margin-top:8px;">— جاري التحميل —</div>
+    </div>
+  
+</section>
+
+</head>
+
 
   
 <section class="skins">
@@ -689,10 +809,9 @@
 
 
 
-
 <!-- مودال التفاصيل -->
 <div class="modal-overlay" id="modal">
-  <div class="modal">
+  <div class="modal" role="dialog" aria-modal="true">
     <button class="close-btn" id="closeModal">&times;</button>
     <div class="modal-left">
       <img src="" alt="صورة السكن" id="modalImage" />
@@ -700,9 +819,35 @@
     <div class="modal-right">
       <h2 id="modalTitle">عنوان السكن</h2>
       <p id="modalDesc">تفاصيل السكن هنا</p>
+
+      <!-- تصنيف و تاريخ و أزرار التحميل و تقييم -->
+      <div style="width:100%; margin-bottom:12px;">
+        <div><strong>التصنيفات:</strong> <span id="modalTags">-</span></div>
+        <div><strong>تاريخ الإضافة:</strong> <span id="modalDate">-</span></div>
+      </div>
+
       <div class="download-buttons" id="modalDownloads">
         <!-- أزرار التحميل هنا ديناميكياً -->
       </div>
+
+      <div style="width:100%; margin-top:14px; display:flex; gap:8px; align-items:center; justify-content:space-between;">
+        <div>
+          <div><strong>الإعجابات:</strong> <span id="likeCount">0</span></div>
+          <button id="likeBtn" class="btn like-btn">❤️ اعجبني</button>
+        </div>
+        <div>
+          <div><strong>التقييم:</strong></div>
+          <div class="rating" id="ratingStars">
+            <span class="star" data-value="1">☆</span>
+            <span class="star" data-value="2">☆</span>
+            <span class="star" data-value="3">☆</span>
+            <span class="star" data-value="4">☆</span>
+            <span class="star" data-value="5">☆</span>
+          </div>
+          <div style="font-size:13px; color:#a3d2ffcc;" id="ratingInfo">0 (0 تقييم)</div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
@@ -710,13 +855,24 @@
 <script>
   // جلب كل أزرار التحميل
   const openButtons = document.querySelectorAll('.open-details');
-  const modal = document.getElementById('modal');
+  const modalOverlay = document.getElementById('modal');
   const modalImage = document.getElementById('modalImage');
   const modalTitle = document.getElementById('modalTitle');
   const modalDesc = document.getElementById('modalDesc');
   const modalDownloads = document.getElementById('modalDownloads');
   const closeModal = document.getElementById('closeModal');
+  const modalTags = document.getElementById('modalTags');
+  const modalDate = document.getElementById('modalDate');
+  const likeBtn = document.getElementById('likeBtn');
+  const likeCountEl = document.getElementById('likeCount');
+  const ratingStars = document.querySelectorAll('.star');
+  const ratingInfo = document.getElementById('ratingInfo');
 
+  // Helper keys in localStorage
+  function keyForLike(name) { return 'skin_like_' + name; }
+  function keyForRating(name) { return 'skin_rating_' + name; } // will store {sum:...,count:...}
+
+  // Open modal and fill
   openButtons.forEach(button => {
     button.addEventListener('click', e => {
       e.preventDefault();
@@ -727,12 +883,16 @@
       const image = skinDiv.dataset.image;
       const desc = skinDiv.dataset.desc;
       const downloads = JSON.parse(skinDiv.dataset.downloads);
+      const tags = skinDiv.dataset.tags || '';
+      const date = skinDiv.dataset.date || '';
 
       // تعبئة المودال
       modalTitle.textContent = name;
       modalImage.src = image;
       modalImage.alt = name;
       modalDesc.textContent = desc;
+      modalTags.textContent = tags.replace(/,/g, ' • ');
+      modalDate.textContent = date;
 
       // تنظيف أزرار التحميل السابقة
       modalDownloads.innerHTML = '';
@@ -747,30 +907,71 @@
         modalDownloads.appendChild(a);
       });
 
-      // إظهار المودال
-      modal.classList.add('active');
+      // like
+      const likeKey = keyForLike(name);
+      const likeValue = parseInt(localStorage.getItem(likeKey) || '0', 10);
+      likeCountEl.textContent = likeValue;
+
+      // rating
+      const ratingKey = keyForRating(name);
+      const ratingData = JSON.parse(localStorage.getItem(ratingKey) || '{"sum":0,"count":0}');
+      const avg = ratingData.count ? (ratingData.sum / ratingData.count) : 0;
+      updateStars(avg);
+      ratingInfo.textContent = `${avg.toFixed(1)} (${ratingData.count} تقييم)`;
+
+      // show modal
+      modalOverlay.classList.add('active');
+
+      // attach handlers for like and stars
+      likeBtn.onclick = () => {
+        const newVal = (parseInt(localStorage.getItem(likeKey) || '0', 10) + 1);
+        localStorage.setItem(likeKey, newVal);
+        likeCountEl.textContent = newVal;
+      };
+
+      ratingStars.forEach(star => {
+        star.onclick = () => {
+          const value = parseInt(star.dataset.value, 10);
+          const cur = JSON.parse(localStorage.getItem(ratingKey) || '{"sum":0,"count":0}');
+          cur.sum += value; cur.count += 1;
+          localStorage.setItem(ratingKey, JSON.stringify(cur));
+          const newAvg = cur.sum / cur.count;
+          updateStars(newAvg);
+          ratingInfo.textContent = `${newAvg.toFixed(1)} (${cur.count} تقييم)`;
+        };
+      });
+
     });
   });
 
+  function updateStars(avg) {
+    ratingStars.forEach(s => {
+      const v = parseInt(s.dataset.value, 10);
+      if (v <= Math.round(avg)) {
+        s.textContent = '★';
+      } else {
+        s.textContent = '☆';
+      }
+    });
+  }
+
   // إغلاق المودال
   closeModal.addEventListener('click', () => {
-    modal.classList.remove('active');
+    modalOverlay.classList.remove('active');
   });
 
   // إغلاق المودال عند الضغط خارج المحتوى
-  modal.addEventListener('click', e => {
-    if (e.target === modal) {
-      modal.classList.remove('active');
+  modalOverlay.addEventListener('click', e => {
+    if (e.target === modalOverlay) {
+      modalOverlay.classList.remove('active');
     }
   });
-</script>
 
- <script>
+  // Search
   const searchInput = document.getElementById('searchInput');
-
+  const skins = document.querySelectorAll('.skin');
   searchInput.addEventListener('input', function () {
     const keyword = searchInput.value.toLowerCase();
-    const skins = document.querySelectorAll('.skin');
 
     skins.forEach(function (skin) {
       const name = skin.getAttribute('data-name').toLowerCase();
@@ -783,10 +984,107 @@
     });
   });
 
+  // Sections / Tags filter
+  const sectionPills = document.querySelectorAll('.section-pill');
+  sectionPills.forEach(p => p.addEventListener('click', () => {
+    sectionPills.forEach(x=>x.classList.remove('active'));
+    p.classList.add('active');
+    const sec = p.dataset.section;
+    filterBySection(sec);
+  }));
+
+  function filterBySection(sec) {
+    skins.forEach(skin => {
+      const tags = (skin.dataset.tags || '').split(',');
+      if (sec === 'all') {
+        skin.style.display = '';
+      } else if (sec === 'popular') {
+        const cnt = parseInt(skin.dataset.downloadsCount || skin.dataset.downloadsCount, 10) || parseInt(skin.dataset.downloadsCount || '0');
+        // show top ones (here count>400 as example)
+        skin.style.display = (parseInt(skin.dataset.downloadsCount || skin.getAttribute('data-downloads-count')|| '0',10) > 400) ? '' : 'none';
+      } else {
+        skin.style.display = tags.includes(sec) ? '' : 'none';
+      }
+    });
+  }
+
+  // Featured: skin of the day (deterministic based on date)
+  const skinOfTheDayEl = document.getElementById('skinOfTheDay');
+  const topDownloadsEl = document.getElementById('topDownloads');
+
+  function computeSkinOfTheDay() {
+    const list = Array.from(document.querySelectorAll('.skin'));
+    if (!list.length) return;
+    const today = new Date();
+    const seed = today.getFullYear()*10000 + (today.getMonth()+1)*100 + today.getDate();
+    const idx = seed % list.length;
+    const chosen = list[idx];
+    skinOfTheDayEl.innerHTML = `<div style=\"display:flex; gap:8px; align-items:center;\"><img src=\"${chosen.dataset.image}\" style=\"width:56px;height:56px;border-radius:8px;\" alt=\"\"> <div><strong>${chosen.dataset.name}</strong><br><span style=\"font-size:12px;color:#a3d2ffcc;\">${chosen.dataset.desc}</span></div></div>`;
+  }
+
+  // compute top downloads (week)
+  function computeTopDownloads() {
+    const list = Array.from(document.querySelectorAll('.skin'));
+    list.sort((a,b)=>{
+      return parseInt(b.getAttribute('data-downloads-count')|| '0',10) - parseInt(a.getAttribute('data-downloads-count')|| '0',10);
+    });
+    topDownloadsEl.innerHTML = '';
+    list.slice(0,5).forEach(s => {
+      const li = document.createElement('li');
+      li.textContent = `${s.dataset.name} — ${s.getAttribute('data-downloads-count') || '0'} تحميل`;
+      topDownloadsEl.appendChild(li);
+    });
+  }
+
+  computeSkinOfTheDay();
+  computeTopDownloads();
+
+  // Buttons: show new and popular
+  document.getElementById('showNew').addEventListener('click', ()=>{
+    // sort by date desc and show first 12
+    const list = Array.from(document.querySelectorAll('.skin'));
+    list.sort((a,b)=>{
+      const da = new Date(a.dataset.date||'1970-01-01');
+      const db = new Date(b.dataset.date||'1970-01-01');
+      return db - da;
+    });
+    // hide all then show top 12
+    skins.forEach(s=>s.style.display='none');
+    list.slice(0,12).forEach(s=>s.style.display='block');
+  });
+  document.getElementById('showPopular').addEventListener('click', ()=>{
+    // show those with downloads-count > 200
+    skins.forEach(s=>{
+      const cnt = parseInt(s.getAttribute('data-downloads-count')|| '0',10);
+      s.style.display = (cnt >= 200) ? '' : 'none';
+    });
+  });
+
+  // Random skin
+  document.getElementById('randomBtn').addEventListener('click', ()=>{
+    const list = Array.from(document.querySelectorAll('.skin')).filter(s=> s.style.display !== 'none');
+    if (!list.length) return alert('لا يوجد سكنات مرئية للاختيار منها.');
+    const idx = Math.floor(Math.random()*list.length);
+    const chosen = list[idx];
+    // open modal for chosen
+    const fakeBtn = chosen.querySelector('.open-details');
+    fakeBtn.click();
+  });
+
+  // small accessibility: open modal by clicking anywhere on skin
+  document.querySelectorAll('.skin').forEach(s=>{
+    s.addEventListener('click', e=>{
+      // avoid triggering when clicking the download anchor specifically
+      if (e.target.tagName.toLowerCase() === 'a') return;
+      s.querySelector('.open-details').click();
+    });
+  });
+
+  // Initialize display (in case css inline changed)
+  filterBySection('all');
+
 </script>
 
-</body>
-</html>
 
 <footer style="
   position: fixed; 
@@ -808,3 +1106,5 @@
   <a href="https://t.me/T_90q" target="_blank" rel="noopener" style="color: #00ffff; text-decoration: underline;">@T_90q</a>
 </footer>
 
+</body>
+</html>
